c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_format(i18n::phonenumbers::NumberFormat* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* format);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_national_prefix_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* national_prefix_formatting_rule);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_pattern(i18n::phonenumbers::NumberFormat* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* pattern);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_char(i18n::phonenumbers::NumberFormat* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_char(i18n::phonenumbers::NumberFormat* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_char(i18n::phonenumbers::NumberFormat* this_ptr, int index, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, int index, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, int index, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_char(i18n::phonenumbers::NumberFormat* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_optional_when_formatting(i18n::phonenumbers::NumberFormat* this_ptr, bool value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_char(i18n::phonenumbers::NumberFormat* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_unknown_fields(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_ByteSize(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_CheckTypeAndMergeFrom(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, const google::protobuf::MessageLite* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_Clear(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_CopyFrom(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, const i18n::phonenumbers::PhoneMetadataCollection* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_DiscardUnknownFields(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetCachedSize(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetTypeName_as_ptr(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetTypeName_to_output(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* output);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_IsInitialized(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_MergeFrom(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, const i18n::phonenumbers::PhoneMetadataCollection* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_New_arena(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr, google::protobuf::Arena* arena);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_New_no_args(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_Swap(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, i18n::phonenumbers::PhoneMetadataCollection* other);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_add_metadata(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_clear_metadata(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_constructor_from(const i18n::phonenumbers::PhoneMetadataCollection* from, i18n::phonenumbers::PhoneMetadataCollection* output);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_constructor_no_args(i18n::phonenumbers::PhoneMetadataCollection* output);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_default_instance();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_delete(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_destructor(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_index(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT const google::protobuf::RepeatedPtrField< i18n::phonenumbers::PhoneMetadata >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_no_args(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_size(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_metadata_index(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT google::protobuf::RepeatedPtrField< i18n::phonenumbers::PhoneMetadata >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_metadata_no_args(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_unknown_fields(i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_new_from(const i18n::phonenumbers::PhoneMetadataCollection* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_new_no_args();
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadataCollection* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_operator_assign(i18n::phonenumbers::PhoneMetadataCollection* this_ptr, const i18n::phonenumbers::PhoneMetadataCollection* from);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_unknown_fields(const i18n::phonenumbers::PhoneMetadataCollection* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_ByteSize(const i18n::phonenumbers::PhoneMetadata* this_ptr);