src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_format(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, format: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_national_prefix_formatting_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, national_prefix_formatting_rule: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, pattern: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_char_unsigned_long
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const libc::c_char,
     size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_domestic_carrier_code_formatting_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_format_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, index: libc::c_int, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, index: libc::c_int, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_leading_digits_pattern_int_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     index: libc::c_int,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_char_unsigned_long
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const libc::c_char,
     size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_formatting_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_national_prefix_optional_when_formatting(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_unknown_fields
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_ByteSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_CheckTypeAndMergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, from: *const ::message_lite::google::protobuf::MessageLite);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_Clear(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_CopyFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_DiscardUnknownFields(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetCachedSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetTypeName_as_ptr
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_GetTypeName_to_output(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, output: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_IsInitialized(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_MergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_New_arena
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection,
     arena: *mut ::arena::google::protobuf::Arena)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_New_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_Swap(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, other: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_add_metadata
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_clear_metadata(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_constructor_from(from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection, output: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_constructor_no_args(output: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_default_instance
    ()
      -> *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_delete(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_destructor(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_index
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection,
     index: libc::c_int)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *const ::repeated_field::google::protobuf::RepeatedPtrFieldPhoneMetadataRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_metadata_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_metadata_index
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection,
     index: libc::c_int)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_metadata_no_args
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::repeated_field::google::protobuf::RepeatedPtrFieldPhoneMetadataRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_mutable_unknown_fields
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_new_from
    (from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_new_no_args
    ()
      -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_operator_assign
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection,
     from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadataCollection_unknown_fields
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadataCollection)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_ByteSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> libc::c_int;
